--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="/Users/aliakseibarysau/JS/Fog/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+    <div class="smoke">
+        <ul>
+          <il>P</ш>
+          <li>a</li>
+          <li>n</li>
+          <li>C</li>
+          <li>a</li>
+          <li>k</li>
+          <li>e</li>
+        </ul>
+      </div>
+      <!--hello-->
+</body>
+</html>
